payment feature added, dropdown issue fixed, cart item issue fixed

--- a/src/screens/Home/index.css
+++ b/src/screens/Home/index.css
@@ -9,5 +9,11 @@
 .search{
     width:50%;
     margin:0 auto ;
-    height:45px
+    height:75px
+}
+
+.select{
+    width:120px;
+    color:black;
+
 }
