--- a/src/screens/Signin/style.css
+++ b/src/screens/Signin/style.css
@@ -1,3 +1,14 @@
 .form{
     display: inline-block;
 }
+
+.image{
+    border-radius: 50%;
+    width:100px;
+    margin-top: 30px;
+}
+
+.loginBtn{
+    margin:10px;
+    margin-bottom: 0;
+}
